@@ -1,14 +1,14 @@
 image: $CI_REGISTRY/$CI_PROJECT_PATH/igt-fedora:latest
 variables:
   MESON_OPTIONS: >
-    -Dwith_libdrm=intel,nouveau,amdgpu
-    -Dbuild_overlay=enabled
-    -Dbuild_chamelium=enabled
-    -Dwith_valgrind=enabled
-    -Dbuild_man=enabled
-    -Dbuild_tests=enabled
-    -Dbuild_runner=enabled
-    -Dwith_libunwind=enabled
+    -Dlibdrm_drivers=intel,nouveau,amdgpu
+    -Doverlay=enabled
+    -Dchamelium=enabled
+    -Dvalgrind=enabled
+    -Dman=enabled
+    -Dtests=enabled
+    -Drunner=enabled
+    -Dlibunwind=enabled
   LANG: "C.UTF-8"
 
 stages:
@@ -33,7 +33,7 @@ build:tests-fedora-no-libunwind:
   stage: build
   script:
     - dnf remove -y libunwind-devel
-    - meson -Dlibunwind=false build
+    - meson -Dlibunwind=disabled build
     - ninja -C build
 
 # documentation building is different with meson<0.47
@@ -72,7 +72,7 @@ build:tests-debian-minimal:
   image: $CI_REGISTRY/$CI_PROJECT_PATH/igt-debian-minimal:latest
   stage: build
   script:
-    - meson -Dbuild_tests=disabled -Dwith_libdrm="" build
+    - meson -Dtests=disabled -Dlibdrm_drivers="" build
     - ninja -C build
   artifacts:
     paths:
