@@ -1,6 +1,6 @@
-option('build_overlay',
+option('overlay',
        type : 'feature',
-       description : 'Build overlay')
+       description : 'Build overlay tool')
 
 option('overlay_backends',
        type : 'array',
@@ -8,37 +8,37 @@ option('overlay_backends',
        choices : [ 'auto', 'x', 'xv' ],
        description : 'Overlay backends to enable')
 
-option('build_chamelium',
+option('chamelium',
        type : 'feature',
-       description : 'Build chamelium test')
+       description : 'Build Chamelium test')
 
-option('with_valgrind',
+option('valgrind',
        type : 'feature',
        description : 'Build with support for valgrind annotations')
 
-option('build_man',
+option('man',
        type : 'feature',
        description : 'Build man pages')
 
-option('build_docs',
+option('docs',
        type : 'feature',
        description : 'Build documentation')
 
-option('build_tests',
+option('tests',
        type : 'feature',
        description : 'Build tests')
 
-option('with_libdrm',
+option('libdrm_drivers',
        type : 'array',
        value : ['auto'],
        choices : ['', 'auto', 'intel', 'nouveau', 'amdgpu'],
        description : 'libdrm libraries to be used')
 
-option('with_libunwind',
+option('libunwind',
        type : 'feature',
        description : 'Use libunwind')
 
-option('build_runner',
+option('runner',
        type : 'feature',
        description : 'Build test runner')
 
